static/css/main.css
/* Table of Contents
- Global Styles
- Layout
- Header + Navs
- Sidebar
- Cards
- Buttons
- Forms
- Images
- Typography
- Chatbot
- Comments
- Misc
- Keyframes
- Media Queries
*/

/* =============
Global Styles
============= */
* {
  font-family: system-ui, Helvetica, Arial, sans-serif;
  font-display: optional;
}

:root {
  --primary-color: rgb(240, 240, 240);
  --muted-white: rgb(240, 240, 240);
  --secondary-color: rgb(18, 18, 18);
  --secondary-color-rgb: 18, 18, 18;
  --post-card-hover-background-color: hsl(0, 0%, 90%);
  --border-color: #777777;
  --a11-red: #990000;
  /* Slightly darker than secondary color */
  --action-color: #333333;
  --link-color: var(--primary-blue);
  --footer-color: rgb(50, 50, 50);
  --background-hover-color: #f7f7f7;
  --primary-blue: #0063f0;
  --primary-blue-hover: #0050d1;
  --dark-badge-background-color: rgb(33, 37, 41);

  /* Chatbot colors */
  --primary-box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
  --secondary-box-shadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
  --primary-gradient: linear-gradient(93.12deg, #0d6efd 0.52%, #007bff 100%);
  --secondary-gradient: linear-gradient(268.91deg,
      #0d6efd -2.14%,
      #007bff 99.69%);
}

html {
  scroll-behavior: smooth;
}

body {
  padding: 0;
  margin: 0;
  line-height: 1.6;
  overflow-x: hidden;
}

body,
input,
.post-card,
.list-group-item {
  background-color: var(--primary-color);
}

/* =============
   Layout
============= */
.content-section {
  margin-bottom: 30px;
}

main {
  max-width: 800px !important;
}

.container {
  display: grid;
  grid-template-columns: 0.25fr 0.5fr 1fr 0.25fr;
}

header {
  grid-column: 1 / 5;
  grid-row: 1;
}

.sidebar {
  grid-column: 2;
  grid-row: 2;
  margin-right: 15px;
}

.post-content {
  grid-column: 3;
  grid-row: 2;
}

footer {
  grid-column: 1 / 5;
  grid-row: 4;
}

.sml-margin-top-bottom {
  margin: 0.5rem 0;
}

.sml-margin-left-right {
  margin: 0 0.5rem;
}

.sml-margin-bottom {
  margin-bottom: 0.5rem;
}

.lg-margin-top-bottom {
  margin: 2rem 0;
}

/* Status Page */

/* =============
   Header + Navs
============= */
/* Logo color is #0b3b8e */
#blogthedata-logo {
  height: 40px;
  width: 34.4px;
}

/* Navbar */
.navbar-menu.show-menu .navbar-nav {
  padding-left: 20px;
}

.hamburger {
  display: none;
  cursor: pointer;
  font-size: 24px;
  background-color: transparent;
  border: none;
  color: var(--primary-color);
}

.hamburger:hover {
  background-color: transparent;
  color: var(--link-color);
}

.navbar-menu.show-menu {
  display: flex;
  z-index: 1;
}

.navbar {
  background-color: var(--secondary-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 20px;
  position: relative;
}

.navbar-brand {
  display: flex;
  align-items: center;
  color: var(--primary-color);
}

.navbar-brand img {
  height: 40px;
  margin-right: 10px;
}

.navbar-menu {
  display: flex;
  align-items: center;
}

.navbar-nav {
  display: flex;
  padding-left: 0;
  margin: 0;
  list-style: none;
  width: 100%;
}

.nav-item {
  display: flex;
  margin: 10px;
}

.nav-link {
  color: var(--primary-color);
  flex-grow: 1;
  width: 100%;
}

/* Dropdown menu */
.dropdown {
  position: relative;
}

.dropdown-menu {
  position: absolute;
  top: 100%;
  left: 0;
  background-color: var(--muted-white);
  min-width: 150px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  border: 1px solid #ccc;
  padding: 5px 0;
  z-index: 1;
  list-style: none;
  margin: 0;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
}

.dropdown-menu.show {
  opacity: 1;
  visibility: visible;
}

.dropdown-item {
  color: #333;
  text-decoration: none;
  display: block;
  padding: 5px 15px;
  white-space: nowrap;
}

.dropdown-item:hover {
  background-color: #f5f5f5;
}

.dropdown:focus-within .dropdown-menu {
  display: block;
}

.nav-link.dropdown-toggle:after {
  content: "";
  display: inline-block;
  margin-left: 0.2rem;
  vertical-align: 0.2rem;
  border-top: 4px solid var(--primary-color);
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
}

/* Search form */
.search-form {
  display: flex;
  margin-left: 15px;
}

/* Github Stars */
.github-icon {
  font-size: 0.9rem;
  display: flex;
  align-items: center;
}

.github-icon svg {
  margin-right: 5px;
}

.github-icon::after {
  content: none !important;
}

/* =============
   Sidebar
============= */

#sidebar-heading {
  text-align: center;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

aside {
  padding: 0 15px;
}

.list-group {
  margin-bottom: 0;
}

.list-group-item {
  border: none;
  position: relative;
  display: block;
  padding: 0.5rem 1rem;
  background-color: var(--primary-color);
  border-radius: 0.25rem;
}

.list-group-item:hover {
  background-color: var(--background-hover-color);
}

.list-group-item.active {
  color: rgb(240, 240, 240);
  background-color: var(--primary-blue);
}

.list-group-item span {
  font-size: 0.8rem;
}

.list-group-item-action {
  width: 100%;
  color: var(--link-color);
  text-align: inherit;
}

.list-group-item-action:hover,
.list-group-item-action:focus {
  color: var(--link-color);
  background-color: var(--background-hover-color);
}

.list-group-item-action.active {
  color: var(--link-color);
  background-color: var(--background-hover-color);
}

.list-group-item[data-badge]::after {
  content: attr(data-badge);
  display: inline-block;
  padding: 0.35em 0.65em;
  font-size: 0.75em;
  font-weight: bold;
  line-height: 1;
  text-align: center;
  color: rgb(240, 240, 240);
  background-color: var(--dark-badge-background-color);
  border-radius: 1rem;
  position: absolute;
  top: 50%;
  right: 1rem;
  transform: translateY(-50%);
}

/* =============
   Footer
============= */

#credit {
  font-size: 0.8rem;
  color: var(--primary-color);
}

footer {
  padding: 20px 0;
  background-color: var(--secondary-color);
}
/* ... */

